# cpp20_vscode_boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
